// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type default (none) 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={
      Object {
        "margin": 0,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      }
    }
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      tabIndex={0}
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type error 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={
      Object {
        "margin": 0,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      }
    }
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      tabIndex={0}
      type="error"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type info 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={
      Object {
        "margin": 0,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      }
    }
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      tabIndex={0}
      type="info"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type primary 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={
      Object {
        "margin": 0,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      }
    }
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      tabIndex={0}
      type="primary"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type secondary 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={
      Object {
        "margin": 0,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      }
    }
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      tabIndex={0}
      type="secondary"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type success 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={
      Object {
        "margin": 0,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      }
    }
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      tabIndex={0}
      type="success"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type warning 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={
      Object {
        "margin": 0,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      }
    }
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      tabIndex={0}
      type="warning"
    />
  </Ripples>
</div>
`;

exports[`<Button /> match snapshot 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={
      Object {
        "margin": 0,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
      }
    }
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      tabIndex={0}
    />
  </Ripples>
</div>
`;

exports[`<Button /> should render a Button 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": Object {
        "dark": "#1b3c4f",
        "light": undefined,
      },
      "border": Object {
        "default": "1px solid #e9e9e9",
      },
      "button": Object {
        "backgroundColor": "rgb(242, 242, 242)",
        "borderColor": "rgb(216, 216, 216)",
        "color": "rgb(53, 53, 53)",
      },
      "button:danger": Object {
        "backgroundColor": "#d13f48",
        "borderColor": "#d13f48",
        "color": "#F3F3F2",
      },
      "button:danger:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#d13f48",
        "color": "#d13f48",
      },
      "button:hover": Object {
        "backgroundColor": "rgb(216, 216, 216)",
        "borderColor": "rgb(153, 153, 153)",
        "color": "rgb(53, 53, 53)",
      },
      "button:primary": Object {
        "backgroundColor": "#26a29a",
        "borderColor": "#00897a",
        "color": "#F3F3F2",
      },
      "button:primary:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#00897a",
        "color": "#26a29a",
      },
      "button:secondary": Object {
        "backgroundColor": "#1b3c4f",
        "borderColor": "#1c313f",
        "color": "#F3F3F2",
      },
      "button:secondary:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#1c313f",
        "color": "#1b3c4f",
      },
      "button:success": Object {
        "backgroundColor": "#009688",
        "borderColor": "#009688",
        "color": "#F3F3F2",
      },
      "button:success:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#009688",
        "color": "#009688",
      },
      "button:warning": Object {
        "backgroundColor": "#ff9800",
        "borderColor": "#ff9800",
        "color": "#F3F3F2",
      },
      "button:warning:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#ff9800",
        "color": "#ff9800",
      },
      "dimensions": Object {
        "mainHeaderHeight": "80px",
      },
      "focusHighlight": "rgb(222, 241, 239)",
      "focusHighlightText": "#26a29a",
      "fontsAndColor": Object {
        "dark": Object {
          "body": Object {
            "color": "rgb(201, 201, 201)",
            "fontSize": "14px",
          },
          "button": Object {
            "color": "#ffffff",
            "fontSize": "14px",
          },
          "caption": Object {
            "color": "rgb(140, 140, 140)",
            "fontSize": "12px",
          },
          "disable": Object {
            "color": "rgb(153, 153, 153)",
          },
          "heading": Object {
            "color": "rgb(226, 226, 226)",
            "fontSize": "16px",
            "fontWeight": 600,
          },
          "link": Object {
            "color": "#15a9a9",
            "fontSize": "12px",
          },
          "title": Object {
            "color": "rgb(226, 226, 226)",
            "fontSize": "24px",
            "fontWeight": "bold",
          },
        },
        "default": Object {
          "color": "#37373a",
          "fontFamily": "Open sans, sans-serif",
        },
        "defaultOnDarkBg": Object {
          "color": "#fff",
          "fontFamily": "Open sans, sans-serif",
        },
        "light": Object {
          "body": Object {
            "color": "rgb(53, 53, 53)",
            "fontSize": "14px",
          },
          "button": Object {
            "color": "rgb(53, 53, 53)",
            "fontSize": "14px",
          },
          "caption": Object {
            "color": "rgb(114, 114, 114)",
            "fontSize": "12px",
          },
          "disable": Object {
            "color": "rgb(102, 102, 102)",
          },
          "heading": Object {
            "color": "rgb(28, 28, 28)",
            "fontSize": "16px",
            "fontWeight": 600,
          },
          "link": Object {
            "color": "#15a9a9",
            "fontSize": "12px",
          },
          "title": Object {
            "color": "rgb(28, 28, 28)",
            "fontSize": "24px",
            "fontWeight": "bold",
          },
        },
      },
      "link": Object {
        "linkOnBgDark": Object {
          "color": "#F3F3F2",
          "cursor": "pointer",
          "textDecoration": "none",
        },
        "linkOnBgDarktHover": Object {
          "color": "#26a29a",
        },
        "linkOnBgLight": Object {
          "color": "rgb(114, 114, 114)",
          "cursor": "pointer",
          "textDecoration": "none",
        },
        "linkOnBgLightHover": Object {
          "color": "#26a29a",
        },
      },
      "marketingText": Object {
        "dark": Object {
          "body": Object {
            "color": "rgb(255, 255, 255)",
            "fontSize": "16px",
          },
          "button": Object {
            "color": "rgb(255, 255, 255)",
            "fontSize": "14px",
          },
          "heading": Object {
            "color": "rgb(255, 255, 255)",
            "fontFamilly": "'Fira Sans', sans-serif",
            "fontSize": "18px",
            "fontWeight": 600,
          },
          "title": Object {
            "color": "rgb(255, 255, 255)",
            "fontFamilly": "'Fira Sans', sans-serif",
            "fontSize": "30px",
            "fontWeight": "bold",
          },
        },
        "light": Object {
          "body": Object {
            "color": "rgb(53, 53, 53)",
            "fontSize": "16px",
          },
          "button": Object {
            "color": "rgb(53, 53, 53)",
            "fontSize": "14px",
          },
          "heading": Object {
            "color": "rgb(28, 28, 28)",
            "fontFamilly": "'Fira Sans', sans-serif",
            "fontSize": "18px",
            "fontWeight": 600,
          },
          "title": Object {
            "color": "rgb(28, 28, 28)",
            "fontFamilly": "'Fira Sans', sans-serif",
            "fontSize": "30px",
            "fontWeight": "bold",
          },
        },
      },
      "outline": "none",
      "outlineShadow": "0 0 3px 1px rgba(35, 35, 35, 0.28)",
      "outlineShadow2": "0 1px 20px 0px hsla(0, 0%, 0%, 0.29), 0 1px 5px 0px hsla(0, 0%, 0%, 0.18)",
      "padding": Object {
        "breathPadding": "1em",
        "defaultPadding": "24px",
        "heading": "10px 0",
        "title": "15px 0",
      },
      "palette": Object {
        "accent": Object {
          "dark": "rgb(30, 129, 123)",
          "light": "rgb(81, 180, 174)",
          "main": "#26a29a",
        },
        "charts": Object {
          "color1": "#64cfba",
          "color2": "#62acba",
          "color3": "#5789b3",
          "color4": "#476ca2",
          "color5": "#335184",
          "color6": "#1b3c4f",
        },
        "darkGrey": "#222222",
        "extraLightGrey": "#c2c2c2",
        "grey": "#9a9a9a",
        "lightGrey": "#d4d4d4",
        "midDarkGrey": "#595959",
        "neutral": Object {
          "dark": "rgb(114, 114, 114)",
          "darker": "rgb(53, 53, 53)",
          "darkest": "rgb(28, 28, 28)",
          "lightDark": "rgb(216, 216, 216)",
          "lightestDark": "rgb(242, 242, 242)",
          "neutral": "rgb(153, 153, 153)",
        },
        "primary": Object {
          "dark": "rgb(21, 48, 63)",
          "light": "rgb(72, 99, 114)",
          "main": "#1b3c4f",
        },
        "pureWhite": "#FFFFFF",
        "semantic": Object {
          "danger": "#d13f48",
          "default": "#cecece",
          "error": "#d13f48",
          "info": "#3e53c1",
          "success": "#009688",
          "warning": "#ff9800",
        },
        "white": "#F3F3F2",
      },
      "radius": "3px",
      "root": Object {
        "fontSize": "14p",
      },
      "sc": Object {
        "h1": Array [
          "font-size: 1.85em; margin: .67em 0;",
        ],
        "h2": Array [
          "font-size: 1.70em; margin: .6em 0;",
        ],
        "h3": Array [
          "font-size: 1.38em; margin: .5em 0;",
        ],
        "h4": Array [
          "font-size: 1.2em; margin: .5em 0;",
        ],
        "h5": Array [
          "font-size: 1em; margin: .5em 0;",
        ],
        "h6": Array [
          "font-size: .86em; margin: .5em 0;",
        ],
        "title": Array [
          "
      color: ",
          "#222222",
          ";
      font-weight: bold;
    ",
        ],
      },
      "shadow": Object {
        "base": "rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px ",
      },
      "title": Object {
        "color": undefined,
      },
      "transition": Object {
        "default": "450ms cubic-bezier(0.23, 1, 0.32, 1) ",
        "defaultAll": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) ",
        "delay": "0ms ",
        "duration": "450ms ",
        "durationIn": "292ms ",
        "durationOut": "196ms ",
        "easing": "cubic-bezier(0.23, 1, 0.32, 1) ",
      },
      "wrapper": Object {
        ".uxi-root": Object {
          "height": "100%",
        },
        ".uxi_container": Object {
          "margin": "0 auto",
          "width": "100%",
        },
        "a": Object {
          "color": "#26a29a",
          "textDecoration": "none",
        },
        "a:hover": Object {
          "color": "rgb(59, 171, 164)",
          "textDecoration": "none",
        },
        "body": Object {
          "height": "100%",
          "margin": 0,
          "padding": 0,
        },
        "h1, h2, h3, h4": Object {
          "color": "rgb(114, 114, 114)",
        },
        "html": Object {
          "background": "#F3F3F2",
          "color": "#222222",
          "fontFamily": "'Source Sans Pro', sans-serif",
          "height": "100%",
          "margin": 0,
          "padding": 0,
        },
        "mediaQueries": Object {
          "(min-width: 1200px)": Object {
            ".uxi_container": Object {
              "margin": "0 auto",
              "maxWidth": "1170px",
            },
          },
          "(min-width: 768px)": Object {
            ".uxi_container": Object {
              "margin": "0 auto",
              "maxWidth": "750px",
            },
          },
          "(min-width: 992px)": Object {
            ".uxi_container": Object {
              "margin": "0 auto",
              "maxWidth": "970px",
            },
          },
        },
        "table": Object {
          "margin": 0,
          "padding": 0,
        },
        "td": Object {
          "padding": "5px 10px",
        },
        "ul": Object {
          "listStyle": "none",
          "margin": 0,
          "padding": 0,
        },
      },
    }
  }
>
  <ThemeProvider
    extendTheme={Object {}}
    isContained={false}
    palette={Object {}}
    theme={Object {}}
  >
    <DndProvider
      backend={[Function]}
    >
      <div
        style={
          Object {
            "height": "100%",
          }
        }
      >
        <GlobalStyleComponent />
        <Button
          onClick={[Function]}
          style={Object {}}
          text="YO!"
        />
      </div>
    </DndProvider>
  </ThemeProvider>
</ThemeProvider>
`;
